grammer/MyLanguageParser.cpp

// Generated from study/Language/grammer/MyLanguage.g4 by ANTLR 4.13.2


#include "MyLanguageListener.h"

#include "MyLanguageParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MyLanguageParserStaticData final {
  MyLanguageParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MyLanguageParserStaticData(const MyLanguageParserStaticData&) = delete;
  MyLanguageParserStaticData(MyLanguageParserStaticData&&) = delete;
  MyLanguageParserStaticData& operator=(const MyLanguageParserStaticData&) = delete;
  MyLanguageParserStaticData& operator=(MyLanguageParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mylanguageParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MyLanguageParserStaticData> mylanguageParserStaticData = nullptr;

void mylanguageParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mylanguageParserStaticData != nullptr) {
    return;
  }
#else
  assert(mylanguageParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MyLanguageParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "varDeclaration", "assignment", "functionDeclaration", 
      "parameterList", "ifStatement", "whileLoop", "forLoopAssignment", 
      "forLoop", "returnStatement", "block", "expressionStatement", "expression", 
      "comparison", "addition", "multiplication", "unary", "primary", "functionCall", 
      "argumentList"
    },
    std::vector<std::string>{
      "", "'let'", "'='", "';'", "'func'", "'('", "')'", "','", "'if'", 
      "'else'", "'while'", "'for'", "'return'", "'{'", "'}'", "'=='", "'!='", 
      "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'!'", "'true'", 
      "'false'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "ID", "INT", "FLOAT", 
      "STRING", "WS", "COMMENT", "MULTILINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mylanguageParserStaticData = std::move(staticData);
}

}

MyLanguageParser::MyLanguageParser(TokenStream *input) : MyLanguageParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MyLanguageParser::MyLanguageParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MyLanguageParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mylanguageParserStaticData->atn, mylanguageParserStaticData->decisionToDFA, mylanguageParserStaticData->sharedContextCache, options);
}

MyLanguageParser::~MyLanguageParser() {
  delete _interpreter;
}

const atn::ATN& MyLanguageParser::getATN() const {
  return *mylanguageParserStaticData->atn;
}

std::string MyLanguageParser::getGrammarFileName() const {
  return "MyLanguage.g4";
}

const std::vector<std::string>& MyLanguageParser::getRuleNames() const {
  return mylanguageParserStaticData->ruleNames;
}

const dfa::Vocabulary& MyLanguageParser::getVocabulary() const {
  return mylanguageParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MyLanguageParser::getSerializedATN() const {
  return mylanguageParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

MyLanguageParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::ProgramContext::EOF() {
  return getToken(MyLanguageParser::EOF, 0);
}

std::vector<MyLanguageParser::StatementContext *> MyLanguageParser::ProgramContext::statement() {
  return getRuleContexts<MyLanguageParser::StatementContext>();
}

MyLanguageParser::StatementContext* MyLanguageParser::ProgramContext::statement(size_t i) {
  return getRuleContext<MyLanguageParser::StatementContext>(i);
}


size_t MyLanguageParser::ProgramContext::getRuleIndex() const {
  return MyLanguageParser::RuleProgram;
}

void MyLanguageParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void MyLanguageParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

MyLanguageParser::ProgramContext* MyLanguageParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MyLanguageParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4267711794) != 0)) {
      setState(42);
      statement();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(48);
    match(MyLanguageParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MyLanguageParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::VarDeclarationContext* MyLanguageParser::StatementContext::varDeclaration() {
  return getRuleContext<MyLanguageParser::VarDeclarationContext>(0);
}

MyLanguageParser::AssignmentContext* MyLanguageParser::StatementContext::assignment() {
  return getRuleContext<MyLanguageParser::AssignmentContext>(0);
}

MyLanguageParser::FunctionDeclarationContext* MyLanguageParser::StatementContext::functionDeclaration() {
  return getRuleContext<MyLanguageParser::FunctionDeclarationContext>(0);
}

MyLanguageParser::IfStatementContext* MyLanguageParser::StatementContext::ifStatement() {
  return getRuleContext<MyLanguageParser::IfStatementContext>(0);
}

MyLanguageParser::WhileLoopContext* MyLanguageParser::StatementContext::whileLoop() {
  return getRuleContext<MyLanguageParser::WhileLoopContext>(0);
}

MyLanguageParser::ForLoopContext* MyLanguageParser::StatementContext::forLoop() {
  return getRuleContext<MyLanguageParser::ForLoopContext>(0);
}

MyLanguageParser::ExpressionStatementContext* MyLanguageParser::StatementContext::expressionStatement() {
  return getRuleContext<MyLanguageParser::ExpressionStatementContext>(0);
}

MyLanguageParser::ReturnStatementContext* MyLanguageParser::StatementContext::returnStatement() {
  return getRuleContext<MyLanguageParser::ReturnStatementContext>(0);
}


size_t MyLanguageParser::StatementContext::getRuleIndex() const {
  return MyLanguageParser::RuleStatement;
}

void MyLanguageParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void MyLanguageParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

MyLanguageParser::StatementContext* MyLanguageParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MyLanguageParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(58);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(50);
      varDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(51);
      assignment();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(52);
      functionDeclaration();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(53);
      ifStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(54);
      whileLoop();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(55);
      forLoop();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(56);
      expressionStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(57);
      returnStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationContext ------------------------------------------------------------------

MyLanguageParser::VarDeclarationContext::VarDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::VarDeclarationContext::ID() {
  return getToken(MyLanguageParser::ID, 0);
}

MyLanguageParser::ExpressionContext* MyLanguageParser::VarDeclarationContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}


size_t MyLanguageParser::VarDeclarationContext::getRuleIndex() const {
  return MyLanguageParser::RuleVarDeclaration;
}

void MyLanguageParser::VarDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclaration(this);
}

void MyLanguageParser::VarDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclaration(this);
}

MyLanguageParser::VarDeclarationContext* MyLanguageParser::varDeclaration() {
  VarDeclarationContext *_localctx = _tracker.createInstance<VarDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, MyLanguageParser::RuleVarDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    match(MyLanguageParser::T__0);
    setState(61);
    match(MyLanguageParser::ID);
    setState(64);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyLanguageParser::T__1) {
      setState(62);
      match(MyLanguageParser::T__1);
      setState(63);
      expression();
    }
    setState(66);
    match(MyLanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

MyLanguageParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::AssignmentContext::ID() {
  return getToken(MyLanguageParser::ID, 0);
}

MyLanguageParser::ExpressionContext* MyLanguageParser::AssignmentContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}


size_t MyLanguageParser::AssignmentContext::getRuleIndex() const {
  return MyLanguageParser::RuleAssignment;
}

void MyLanguageParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void MyLanguageParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}

MyLanguageParser::AssignmentContext* MyLanguageParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 6, MyLanguageParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(MyLanguageParser::ID);
    setState(69);
    match(MyLanguageParser::T__1);
    setState(70);
    expression();
    setState(71);
    match(MyLanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

MyLanguageParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::FunctionDeclarationContext::ID() {
  return getToken(MyLanguageParser::ID, 0);
}

MyLanguageParser::BlockContext* MyLanguageParser::FunctionDeclarationContext::block() {
  return getRuleContext<MyLanguageParser::BlockContext>(0);
}

MyLanguageParser::ParameterListContext* MyLanguageParser::FunctionDeclarationContext::parameterList() {
  return getRuleContext<MyLanguageParser::ParameterListContext>(0);
}


size_t MyLanguageParser::FunctionDeclarationContext::getRuleIndex() const {
  return MyLanguageParser::RuleFunctionDeclaration;
}

void MyLanguageParser::FunctionDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDeclaration(this);
}

void MyLanguageParser::FunctionDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDeclaration(this);
}

MyLanguageParser::FunctionDeclarationContext* MyLanguageParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, MyLanguageParser::RuleFunctionDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(MyLanguageParser::T__3);
    setState(74);
    match(MyLanguageParser::ID);
    setState(75);
    match(MyLanguageParser::T__4);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyLanguageParser::ID) {
      setState(76);
      parameterList();
    }
    setState(79);
    match(MyLanguageParser::T__5);
    setState(80);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

MyLanguageParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MyLanguageParser::ParameterListContext::ID() {
  return getTokens(MyLanguageParser::ID);
}

tree::TerminalNode* MyLanguageParser::ParameterListContext::ID(size_t i) {
  return getToken(MyLanguageParser::ID, i);
}


size_t MyLanguageParser::ParameterListContext::getRuleIndex() const {
  return MyLanguageParser::RuleParameterList;
}

void MyLanguageParser::ParameterListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList(this);
}

void MyLanguageParser::ParameterListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList(this);
}

MyLanguageParser::ParameterListContext* MyLanguageParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 10, MyLanguageParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(MyLanguageParser::ID);
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyLanguageParser::T__6) {
      setState(83);
      match(MyLanguageParser::T__6);
      setState(84);
      match(MyLanguageParser::ID);
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

MyLanguageParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::ExpressionContext* MyLanguageParser::IfStatementContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}

std::vector<MyLanguageParser::BlockContext *> MyLanguageParser::IfStatementContext::block() {
  return getRuleContexts<MyLanguageParser::BlockContext>();
}

MyLanguageParser::BlockContext* MyLanguageParser::IfStatementContext::block(size_t i) {
  return getRuleContext<MyLanguageParser::BlockContext>(i);
}


size_t MyLanguageParser::IfStatementContext::getRuleIndex() const {
  return MyLanguageParser::RuleIfStatement;
}

void MyLanguageParser::IfStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStatement(this);
}

void MyLanguageParser::IfStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStatement(this);
}

MyLanguageParser::IfStatementContext* MyLanguageParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, MyLanguageParser::RuleIfStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(MyLanguageParser::T__7);
    setState(91);
    match(MyLanguageParser::T__4);
    setState(92);
    expression();
    setState(93);
    match(MyLanguageParser::T__5);
    setState(94);
    block();
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyLanguageParser::T__8) {
      setState(95);
      match(MyLanguageParser::T__8);
      setState(96);
      block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileLoopContext ------------------------------------------------------------------

MyLanguageParser::WhileLoopContext::WhileLoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::ExpressionContext* MyLanguageParser::WhileLoopContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}

MyLanguageParser::BlockContext* MyLanguageParser::WhileLoopContext::block() {
  return getRuleContext<MyLanguageParser::BlockContext>(0);
}


size_t MyLanguageParser::WhileLoopContext::getRuleIndex() const {
  return MyLanguageParser::RuleWhileLoop;
}

void MyLanguageParser::WhileLoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileLoop(this);
}

void MyLanguageParser::WhileLoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileLoop(this);
}

MyLanguageParser::WhileLoopContext* MyLanguageParser::whileLoop() {
  WhileLoopContext *_localctx = _tracker.createInstance<WhileLoopContext>(_ctx, getState());
  enterRule(_localctx, 14, MyLanguageParser::RuleWhileLoop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(MyLanguageParser::T__9);
    setState(100);
    match(MyLanguageParser::T__4);
    setState(101);
    expression();
    setState(102);
    match(MyLanguageParser::T__5);
    setState(103);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForLoopAssignmentContext ------------------------------------------------------------------

MyLanguageParser::ForLoopAssignmentContext::ForLoopAssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::ForLoopAssignmentContext::ID() {
  return getToken(MyLanguageParser::ID, 0);
}

MyLanguageParser::ExpressionContext* MyLanguageParser::ForLoopAssignmentContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}


size_t MyLanguageParser::ForLoopAssignmentContext::getRuleIndex() const {
  return MyLanguageParser::RuleForLoopAssignment;
}

void MyLanguageParser::ForLoopAssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForLoopAssignment(this);
}

void MyLanguageParser::ForLoopAssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForLoopAssignment(this);
}

MyLanguageParser::ForLoopAssignmentContext* MyLanguageParser::forLoopAssignment() {
  ForLoopAssignmentContext *_localctx = _tracker.createInstance<ForLoopAssignmentContext>(_ctx, getState());
  enterRule(_localctx, 16, MyLanguageParser::RuleForLoopAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(MyLanguageParser::ID);
    setState(106);
    match(MyLanguageParser::T__1);
    setState(107);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForLoopContext ------------------------------------------------------------------

MyLanguageParser::ForLoopContext::ForLoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::BlockContext* MyLanguageParser::ForLoopContext::block() {
  return getRuleContext<MyLanguageParser::BlockContext>(0);
}

MyLanguageParser::VarDeclarationContext* MyLanguageParser::ForLoopContext::varDeclaration() {
  return getRuleContext<MyLanguageParser::VarDeclarationContext>(0);
}

MyLanguageParser::AssignmentContext* MyLanguageParser::ForLoopContext::assignment() {
  return getRuleContext<MyLanguageParser::AssignmentContext>(0);
}

std::vector<MyLanguageParser::ExpressionContext *> MyLanguageParser::ForLoopContext::expression() {
  return getRuleContexts<MyLanguageParser::ExpressionContext>();
}

MyLanguageParser::ExpressionContext* MyLanguageParser::ForLoopContext::expression(size_t i) {
  return getRuleContext<MyLanguageParser::ExpressionContext>(i);
}

MyLanguageParser::ForLoopAssignmentContext* MyLanguageParser::ForLoopContext::forLoopAssignment() {
  return getRuleContext<MyLanguageParser::ForLoopAssignmentContext>(0);
}


size_t MyLanguageParser::ForLoopContext::getRuleIndex() const {
  return MyLanguageParser::RuleForLoop;
}

void MyLanguageParser::ForLoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForLoop(this);
}

void MyLanguageParser::ForLoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForLoop(this);
}

MyLanguageParser::ForLoopContext* MyLanguageParser::forLoop() {
  ForLoopContext *_localctx = _tracker.createInstance<ForLoopContext>(_ctx, getState());
  enterRule(_localctx, 18, MyLanguageParser::RuleForLoop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(MyLanguageParser::T__10);
    setState(110);
    match(MyLanguageParser::T__4);
    setState(114);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MyLanguageParser::T__0: {
        setState(111);
        varDeclaration();
        break;
      }

      case MyLanguageParser::ID: {
        setState(112);
        assignment();
        break;
      }

      case MyLanguageParser::T__2: {
        setState(113);
        match(MyLanguageParser::T__2);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(117);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4267704352) != 0)) {
      setState(116);
      expression();
    }
    setState(119);
    match(MyLanguageParser::T__2);
    setState(122);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(120);
      expression();
      break;
    }

    case 2: {
      setState(121);
      forLoopAssignment();
      break;
    }

    default:
      break;
    }
    setState(124);
    match(MyLanguageParser::T__5);
    setState(125);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatementContext ------------------------------------------------------------------

MyLanguageParser::ReturnStatementContext::ReturnStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::ExpressionContext* MyLanguageParser::ReturnStatementContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}


size_t MyLanguageParser::ReturnStatementContext::getRuleIndex() const {
  return MyLanguageParser::RuleReturnStatement;
}

void MyLanguageParser::ReturnStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStatement(this);
}

void MyLanguageParser::ReturnStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStatement(this);
}

MyLanguageParser::ReturnStatementContext* MyLanguageParser::returnStatement() {
  ReturnStatementContext *_localctx = _tracker.createInstance<ReturnStatementContext>(_ctx, getState());
  enterRule(_localctx, 20, MyLanguageParser::RuleReturnStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    match(MyLanguageParser::T__11);
    setState(129);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4267704352) != 0)) {
      setState(128);
      expression();
    }
    setState(131);
    match(MyLanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

MyLanguageParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
